config/fr-production/test/echoserver-ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver
  namespace: admin
  labels:
    ingress: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Path(`/echo`)
      services:
        - name: echoserver
          namespace: admin
          port: 8080
